--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,5 @@
 
 [template.environment]
   REACT_APP_LIFERAY_API = "change me to your Liferay instance address"
-  REACT_APP_LIFERAY_USER = "change me to a privileged Liferay user"
+  REACT_APP_LIFERAY_USER = "change me to a privileged Liferay user identifier"
   REACT_APP_LIFERAY_PASSWORD = "change me to a privileged Liferay user password"
