docs: add env variables as comments

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
+
+# Required variables
+
+# REACT_APP_LIFERAY_API
+# REACT_APP_LIFERAY_USER
+# REACT_APP_LIFERAY_PASSWORD
