--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "fusioncharts": "^3.18.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-fusioncharts": "^4.0.0",
-    "react-scripts": "4.0.3",
-    "sass": "^1.62.0"
+    "fusioncharts": "3.23.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-fusioncharts": "4.1.0",
+    "react-scripts": "5.0.1",
+    "sass": "1.77.6"
   },
   "scripts": {
     "start": "react-scripts start",
