--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "buffer": "^6.0.3",
     "fusioncharts": "3.23.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-fusioncharts": "4.1.0",
     "react-scripts": "5.0.1",
-    "sass": "1.77.6"
+    "sass": "1.77.6",
+    "webcomponent": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
